<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profileCard"
        android:layout_width="340dp"
        android:layout_height="280dp"
        app:cardElevation="26dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profileHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_fragment_heading"
                android:textSize="26sp"
                android:fontFamily="@font/poppinsbold"
                app:layout_constraintBottom_toTopOf="@id/editUserName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/name_heading"
                app:layout_constraintBottom_toTopOf="@id/userHeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/editUserName"
                app:layout_constraintTop_toBottomOf="@id/profileHeading" />

            <EditText
                android:id="@+id/editUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_input_hint"
                android:fontFamily="sans-serif-condensed"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textNoSuggestions"
                app:layout_constraintBottom_toBottomOf="@+id/userName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/userName"
                app:layout_constraintTop_toTopOf="@+id/userName" />

            <TextView
                android:id="@+id/userHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/height_heading"
                app:layout_constraintBottom_toTopOf="@id/userWeight"
                app:layout_constraintStart_toStartOf="@+id/userName"
                app:layout_constraintTop_toBottomOf="@id/userName" />

            <EditText
                android:id="@+id/editUserHeight"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/height_input_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|textNoSuggestions"
                app:layout_constraintBottom_toBottomOf="@+id/userHeight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/userHeight"
                app:layout_constraintTop_toTopOf="@+id/userHeight" />

            <TextView
                android:id="@+id/userWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_heading"
                android:fontFamily="@font/poppinsbold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/userName"
                app:layout_constraintTop_toBottomOf="@id/userHeight" />

            <EditText
                android:id="@+id/editUserWeight"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/weight_input_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|textNoSuggestions"
                app:layout_constraintBottom_toBottomOf="@+id/userWeight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/userWeight"
                app:layout_constraintTop_toTopOf="@+id/userWeight" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="166dp"
        android:height="56dp"
        app:elevation="6dp"
        android:translationZ="6dp"
        android:stateListAnimator="@null"
        android:fontFamily="sans-serif-black"
        android:background="@drawable/ripple_effect"
        android:text="@string/update_btn_text"
        android:textSize="20sp"
        app:backgroundTint="@color/medium_turquoise"
        app:icon="@drawable/ic_update"
        app:iconGravity="textStart"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileCard" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/profile_illustration_description"
        android:src="@drawable/ic_running"
        app:layout_constraintBottom_toTopOf="@+id/profileCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>